# verkle-cryptography-wasm

./: .babelrc  .eslintrc.js  .gitignore  .npmignore  .yarnrc.yml  CHANGELOG.md  Cargo.toml  README.md  buildPhaseCargoCommand.sh  package-lock.json  package-old.json  package.json  result  script.js  tsconfig.json  tsconfig.prod.cjs.json  tsconfig.prod.esm.json  vitest.config.browser.ts
.github/workflows/: javascript.yml  rust.yml  wasm.yml
bindings/: .eslintrc.js  .mocharc.json  Cargo.toml  package.json  result  tsconfig.json
bindings/js_code/: package.json  stateless_update.js
bindings/src/: commit.rs  lib.rs  old_api.rs  scalar_field.rs
cli/: ts-build.sh
js_code/: index.js  package-lock.json  pedersen.js  stateless_update.js
pkg/: package.json  rust_verkle_wasm_bg.wasm
scripts/: copy-wasm.sh  install-bindgen.sh  install-wasm-bindgen.sh  rust-build.sh  ts-build.sh  wasmToB64.js
src/: element.rs  lib.rs
src.rs/: .gitignore  Cargo.toml  README.md  rust_verkle_wasm.js
src.rs/src/: commit.rs  element.rs  lib.rs  verkle_ffi_api.rs
src.ts/: README.md  index.ts
src.ts/banderwagon_bindings/: element.ts  index.ts  point.ts
src.ts/ecc/: basefield.ts
src.ts/ecc_bindings/: scalar_field.ts
src.ts/ellipticCurveCryptography/: baseField.ts  field.ts  index.ts  scalarField.ts
src.ts/ellipticCurveCryptographyBindings/: index.ts  scalarField.ts
src.ts/tests/: ffi.spec.ts  field.spec.ts  script.cjs
src.ts/verkleFFIBindings/: getTreeKey.ts  index.ts  verkleFFI.ts
src/banderwagon_bindings/: element.ts
src/js/: index.ts  package-old.json
src/js/banderwagon_bindings/: element.ts  index.ts  pedersen.ts  point.ts
src/js/ecc_bindings/: scalar_field.ts
src/js/ellipticCurveCryptography/: baseField.ts  field.ts  index.ts  scalarField.ts
src/js/ellipticCurveCryptographyBindings/: index.ts  scalarField.ts
src/js/tests/: ffi.spec.ts  field.spec.ts  field.test.ts  pedersenHash.spec.ts
src/js/verkleFFIBindings/: getTreeKey.ts  index.ts
src/rust-verkle-wasm/: installPhase.sh  package.json  result
src/rust-wasm/: Cargo.toml  README.md  installPhase.sh  result
src/rust-wasm/src/: scalar_field.rs  verkle_ffi_api.rs
test/node/: index.test.ts
tests/: field.test.ts
verkle_trie_js/: package.json  tsconfig.json
verkle_trie_js/src/: index.ts
verkle_trie_js/src/banderwagon/: element.ts
verkle_trie_js/src/banderwagon_bindings/: element.ts  index.ts
verkle_trie_js/src/ecc/: basefield.ts  field.ts  index.ts  scalarfield.ts
verkle_trie_js/src/ecc_bindings/: index.ts  scalar_field.ts
verkle_trie_js/tests/: field.test.ts
