[package]
name = "rust-verkle-wasm"
version = "0.1.0"
authors = ["Kevaundray Wedderburn <kevtheappdev@gmail.com>"]
edition = "2018"
license = "MIT or APACHE"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
verkle-trie = { git = "https://github.com/crate-crypto/rust-verkle", rev = "6df39e5461e424594b0d26e0ef1038106de68d80" }
verkle-spec = { git = "https://github.com/crate-crypto/rust-verkle", rev = "6df39e5461e424594b0d26e0ef1038106de68d80" }
# This is needed so that we can enable the js feature, which is being used in ark-serialize
# Without it, the wasm will not compile, since we cannot conditionally compile ark-serialize
getrandom = { version = "0.2.3", features = ["js"] }
js-sys = "0.3.55"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }


[dev-dependencies]
wasm-bindgen-test = "0.3.13"
ark-ff = "*"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
